# rellaf

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
demo/: cweb_dao.cpp  cweb_dao.h  cweb_service.cpp  cweb_service.h  cweb_service.proto  demo.cpp  info.cpp  info.h  limit_model.cpp  limit_model.h
docs/: reference.md
include/: cast.hpp  common.h  dao.h  enum.h  log.h  model.h  model_type.h  mysql_escape.h  rellaf.h  rellaf_types.h  sql_builder.h  str.hpp  trim.hpp
include/brpc/: brpc_dispatcher.h  brpc_service.h  function_mapper.hpp  handler.h  handler_mapper.hpp  http_arg_type.h  http_client.h
include/json/: json_to_model.h
include/mysql/: sql_executor.h
src/: dao.cpp  enum.cpp  mapper.h  model.cpp  model_type.cpp  mysql_escape.cpp  sql_builder.cpp  sql_pattern.cpp  sql_pattern.h  var_pattern.cpp  var_pattern.h
src/brpc/: brpc_dispatcher.cpp  brpc_service.cpp  http_arg_type.cpp  http_client.cpp
src/json/: json_model_tool.cpp  json_model_tool.h  json_to_model.cpp
src/mysql/: dao_simple_adapt.h  flatch.hpp  flist.hpp  fqueue.hpp  mysql_escape.cpp  mysql_escape.h  mysql_simple_poll.cpp  mysql_simple_pool.cpp  mysql_simple_pool.h  mysql_simple_result.cpp  mysql_simple_result.h  sql_executor.cpp  sql_model_tool.cpp  sql_model_tool.h
test/: http_client.hpp  test_brpc_service.cpp  test_common.h  test_dao.cpp  test_enum.cpp  test_json.cpp  test_mapper.cpp  test_model.cpp  test_sql_builder.cpp
test/proto/: test_service.proto
